# adsc-snark

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
adscsnark-folklore/: CMakeLists.txt  folklore_adscsnark.hpp  folklore_adscsnark.tcc  profile_folklore_adscsnark.cpp  sequence_check_gadget.hpp  sequence_check_gadget.tcc
adscsnark-strawman/: CMakeLists.txt  profile_strawman_adscsnark.cpp  signature_gadget.hpp  signature_gadget.tcc  state_gadget.hpp  state_gadget.tcc  strawman_adscsnark.hpp  strawman_adscsnark.tcc
application/: CMakeLists.txt
application/controller/: controller_scenario.cpp  flightcontrol_scenario.cpp  scenario_network.cpp  scenario_network.h
application/gadgets/: comp_gadgets.hpp  comp_gadgets.tcc  control_gadgets_structured.hpp  control_gadgets_structured.tcc  duplex_voter_gadget.hpp  duplex_voter_gadget.tcc  flightcontrol_gadgets.hpp  flightcontrol_gadgets.tcc  flightcontrol_variables.hpp  flightcontrol_variables.tcc  integer_arithmetic.hpp  integer_arithmetic.tcc  range_gadgets.hpp  range_gadgets.tcc  utils.cpp  utils.h
application/gadgets/test/: pidcheck.m
depends/: CMakeLists.txt
run/: adsc_benchmark  adsc_benchmarks_input  adsc_benchmarks_states  controller_benchmark  run_all
